tests/NormalTests/paczka1/fuzzy1/61532674.err
Error in line 8: 5x4p S758 7,96
Error in line 10: b406 S758 59,0
Error in line 4: 5x4p S758 1,8
Error in line 30: AjtnPkgyPHd A730 188,61
Error in line 5: 2JtQxzJ4XER A730 96,4
Error in line 15: S758 S821 32,1
